RenderTextMac: Invoke SkiaTextRenderer::SetFontRenderParams()

RenderTextMac currently doesn't invoke SetFontRenderParams which means
parameters such as RenderText::subpixel_rendering_suppressed() do not
propagate.

BUG=608575

Review-Url: https://codereview.chromium.org/1941293002
Cr-Commit-Position: refs/heads/master@{#391452}

Former-commit-id: 63254c155cad73e88e113887f2646603f96986f8