ui/gfx/render_text_harfbuzz.h
@@ -176,6 +176,8 @@ class GFX_EXPORT RenderTextHarfBuzz : public RenderText {
   void DrawVisualText(internal::SkiaTextRenderer* renderer) override;
 
  private:
+  friend class test::RenderTextTestApi;
+
   FRIEND_TEST_ALL_PREFIXES(RenderTextTest, Multiline_HorizontalAlignment);
   FRIEND_TEST_ALL_PREFIXES(RenderTextTest, Multiline_NormalWidth);
   FRIEND_TEST_ALL_PREFIXES(RenderTextTest, Multiline_WordWrapBehavior);
