ui/gfx/render_text_mac.mm
@@ -207,6 +207,9 @@ void RenderTextMac::DrawVisualText(internal::SkiaTextRenderer* renderer) {
 
   ApplyFadeEffects(renderer);
   ApplyTextShadows(renderer);
+  renderer->SetFontRenderParams(
+      font_list().GetPrimaryFont().GetFontRenderParams(),
+      subpixel_rendering_suppressed());
 
   for (size_t i = 0; i < runs_.size(); ++i) {
     const TextRun& run = runs_[i];
